# verifiable-fhe-paper

./: .gitignore  Cargo.toml  README.md  circuit.sage  fri.sage  gates.sage  plonk.sage  plonk_gadgets.sage  poly_fri.sage  prod_tree.sage  vfhe.sage  vfhe_demo_part1.sage  vfhe_demo_part2.sage
docs/eoq_report_q1_23/: local.bib  main.tex
docs/eoq_report_q2_23/: local.bib  main.tex
docs/fhe.org_sub/: main.tex
docs/fhe_and_ivc/: local.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex
docs/vfhe_doc/: local.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex
src/: main.rs  vec_arithmetic.rs
src/ntt/: mod.rs  params_1024.rs  params_128.rs  params_16.rs  params_2048.rs  params_32.rs  params_512.rs  params_64.rs
src/vtfhe/: ggsw_ct.rs  glwe_ct.rs  glwe_poly.rs  ivc_based_vpbs.rs  lev_ct.rs
src/vtfhe/crypto/: ggsw.rs  glev.rs  lwe.rs  mod.rs  poly.rs
vfhe_plonky2/: Cargo.toml
vfhe_plonky2/src/: bench.rs  ivc_based_product.rs  main.rs  repeated_squaring.rs  vec_arithmetic.rs
vfhe_plonky2/src/ntt/: gen_param_file.sage  gen_param_file.sage.py  mod.rs  params_256.rs  params_8.rs
vfhe_plonky2/src/vtfhe/: glev_ct.rs  glwe_poly.rs  ivc_based_vpbs.rs  mod.rs
vfhe_plonky2/src/vtfhe/crypto/: glwe.rs  lwe.rs  mod.rs  poly.rs
